# nautilus-poem

./: .gitignore  DEV.md  README.md  install.sh  items.yml  nautilus-poem.py  pyproject.toml
